--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ version: "3.9"
 services:
   nextjs:
     container_name: mot-ai
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
     restart: always
     environment:
       - NODE_ENV=production
-    volumes:
-      - .:/app
-      - /app/node_modules
+    # Jangan mount volume dari host ke container agar build .next tidak hilang
