--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,41 +1,33 @@
 stages:
-  - install
   - build
   - deploy
 
 variables:
-  APP_NAME: mot-ai
-  DEPLOY_USER: root
+  DOCKER_DRIVER: overlay2
+  CONTAINER_NAME: mot-ai-dev
+  DEPLOY_USER: rizqi_rifai
   DEPLOY_SERVER: 34.128.73.186
   DEPLOY_PATH: /home/rizqi_rifai/mot-ai
-  NODE_ENV: production
 
-cache:
-  paths:
-    - node_modules/
-
-install_dependencies:
-  stage: install
-  script:
-    - export NVM_DIR="$HOME/.nvm"
-    - export PATH="$NVM_DIR/versions/node/v24.4.0/bin:$PATH"
-    - node -v
-    - npm -v
-    - npm ci
-
-build_app:
+build_dev_image:
   stage: build
   script:
-    - export NVM_DIR="$HOME/.nvm"
-    - export PATH="$NVM_DIR/versions/node/v24.4.0/bin:$PATH"
-    - npm run build
-  artifacts:
-    paths:
-      - .next
-      - package.json
-      - public
+    - docker build -t $CONTAINER_NAME .
+  tags:
+    - docker
 
-deploy_to_server:
+run_dev_container:
+  stage: deploy
+  script:
+    - docker stop $CONTAINER_NAME || true
+    - docker rm $CONTAINER_NAME || true
+    - docker run -d -p 3000:3000 --name $CONTAINER_NAME -v $CI_PROJECT_DIR:/app $CONTAINER_NAME
+  tags:
+    - docker
+  except:
+    - main
+
+deploy_to_dev_server:
   stage: deploy
   before_script:
     - 'which ssh-agent || ( yum install -y openssh-clients )'
@@ -45,18 +37,8 @@ deploy_to_server:
     - chmod 700 ~/.ssh
     - ssh-keyscan $DEPLOY_SERVER >> ~/.ssh/known_hosts
   script:
-    - ssh $DEPLOY_USER@$DEPLOY_SERVER "
-        mkdir -p $DEPLOY_PATH &&
-        cd $DEPLOY_PATH &&
-        rm -rf .next node_modules
-      "
-    - scp -r .next package.json public $DEPLOY_USER@$DEPLOY_SERVER:$DEPLOY_PATH
-    - ssh $DEPLOY_USER@$DEPLOY_SERVER "
-        cd $DEPLOY_PATH &&
-        npm install --omit=dev &&
-        pm2 delete $APP_NAME || true &&
-        pm2 start 'npm start' --name '$APP_NAME' &&
-        pm2 save
-      "
+    - ssh $DEPLOY_USER@$DEPLOY_SERVER "cd $DEPLOY_PATH && git pull && docker-compose up -d --build"
   only:
     - main
+  tags:
+    - docker
