--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
-stages:
-  - build
-  - deploy
+image: docker:24
+
+services:
+  - docker:24-dind
 
 variables:
   DOCKER_DRIVER: overlay2
@@ -9,6 +10,13 @@ variables:
   DEPLOY_SERVER: 34.128.73.186
   DEPLOY_PATH: /home/rizqi_rifai/mot-ai
 
+before_script:
+  - apk add --no-cache openssh-client nodejs npm
+
+stages:
+  - build
+  - deploy
+
 build_dev_image:
   stage: build
   script:
@@ -16,21 +24,10 @@ build_dev_image:
   tags:
     - docker
 
-run_dev_container:
-  stage: deploy
-  script:
-    - docker stop $CONTAINER_NAME || true
-    - docker rm $CONTAINER_NAME || true
-    - docker run -d -p 3000:3000 --name $CONTAINER_NAME -v $CI_PROJECT_DIR:/app $CONTAINER_NAME
-  tags:
-    - docker
-  except:
-    - main
-
 deploy_to_dev_server:
   stage: deploy
   before_script:
-    - 'which ssh-agent || ( yum install -y openssh-clients )'
+    - apk add --no-cache openssh-client
     - eval $(ssh-agent -s)
     - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
     - mkdir -p ~/.ssh
